--- a/package.json
+++ b/package.json
@@ -25,19 +25,23 @@
     "mysql2": "^3.9.7",
     "next": "^14.2.1",
     "next-auth": "^4.24.7",
+    "preline": "^2.3.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-spotify-embed": "^2.0.4",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "daisyui": "^4.12.2",
     "drizzle-kit": "^0.21.4",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
